# hollow

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
src/: app.rs  config.rs  editor.rs  export.rs  focus.rs  input.rs  main.rs  project.rs  search.rs  session.rs  spell.rs  stats.rs  theme.rs  ui.rs  versions.rs
tests/: integration_test.rs
