[package]
name = "hollow"
version = "0.1.2"
edition = "2021"
description = "Distraction-free terminal writing environment"
license = "MIT"
authors = ["Katie the Clawdius Prime <blackabee@gmail.com>"]
repository = "https://github.com/katieblackabee/hollow"
keywords = ["writing", "terminal", "tui", "markdown", "editor"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
ropey = "1.6"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
