[package]
name = "hollow"
version = "0.1.2"
edition = "2021"
description = "Distraction-free terminal writing environment"
license = "MIT"
authors = ["Katie <blackabee@gmail.com>"]
repository = "https://github.com/sudokatie/hollow"
keywords = ["writing", "terminal", "tui", "markdown", "editor"]
categories = ["command-line-utilities", "text-editors"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
ropey = "1.6"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
flate2 = "1.0"
pulldown-cmark = "0.10"

[dev-dependencies]
tempfile = "3.10"
